fix(header mobile icon): Fixed mis-alignment of icon and logo.

--- a/index.css
+++ b/index.css
@@ -134,11 +134,7 @@ body {
 	align-items: center;
 	justify-content: flex-end;
 }
-@supports (height: 100svh) {
-	.mobile__menu {
-		height: 100svh;
-	}
-}
+
 .header__mobile__nav {
 	position: absolute;
 	top: 0;
@@ -178,6 +174,8 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
+
+	align-self: center;
 }
 /* class for showing display */
 .toggle-display {
@@ -301,7 +299,7 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 
-	height: 45svh;
+	height: 45vh;
 	width: 100%;
 
 	font-size: 3rem;
